--- a/fdphd.bib
+++ b/fdphd.bib
@@ -688,6 +688,16 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2006},
   publisher={Optical Society of America}
 }
+@article{rybin2014photonic,
+  title={Photonic properties of two-dimensional high-contrast periodic structures: Numerical calculations},
+  author={Rybin, MV and Sinev, IS and Samusev, KB and Hosseinzadeh, A and Semouchkin, GB and Semouchkina, EA and Limonov, MF},
+  journal={Physics of the Solid State},
+  volume={56},
+  number={3},
+  pages={588--593},
+  year={2014},
+  publisher={Springer}
+}
 @article{rybin2015phase,
   title={Phase diagram for the transition from photonic crystals to dielectric metamaterials},
   author={Rybin, Mikhail V and Filonov, Dmitry S and Samusev, Kirill B and Belov, Pavel A and Kivshar, Yuri S and Limonov, Mikhail F},
@@ -2729,4 +2739,24 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   number={5},
   pages={964--967},
   year={1961}
+}
+
+@inproceedings{wubs2013nonlocal,
+  title={Nonlocal modification and quantum optical generalization of effective-medium theory for metamaterials},
+  author={Wubs, Martijn and Yan, Wei and Amooghorban, Ehsan and Mortensen, N Asger},
+  booktitle={SPIE NanoScience+ Engineering},
+  pages={88061F--88061F},
+  year={2013},
+  organization={International Society for Optics and Photonics}
+}
+
+@article{tassin2012comparison,
+  title={A comparison of graphene, superconductors and metals as conductors for metamaterials and plasmonics},
+  author={Tassin, Philippe and Koschny, Thomas and Kafesaki, Maria and Soukoulis, Costas M},
+  journal={Nature Photonics},
+  volume={6},
+  number={4},
+  pages={259--264},
+  year={2012},
+  publisher={Nature Publishing Group}
 }
