--- a/conclusion.tex
+++ b/conclusion.tex
@@ -37,7 +37,9 @@
 %  * the Results section has shown that for the idealized lattice of resonant elements, denoted as a Bloch lattice in \ref{simovski2007bloch}, the spectra of effective index of refraction would have a form of alternating photonic bands, with always growing Neff(f), and photonic band gaps, where $Neff'(f)$ follows a Brillouin zone boundary, except for well-defined individual resonances of the electric or magnetic dipole. The results have, nonetheless, also proven that this interpretation is only approximate, due to evanescent inter-cell coupling and the resulting spatial dispersion. In particular, some structures made of metal preclude to use the $Neff'(f)$
 %	  
 %  * pointed out the fundamental problems: 
-%      1) losses in available materials, 
+%      1) losses in available materials,   \cite{tassin2012comparison}
+
+
 %      2) excessive spatial dispersion in known structures; i.e. the eff-param spectra often 'stick' to the BZ boundary
 %		  without this interpretation, various papers fail to explain the typical "antiresonance" in effective parameters, that seems to cause confusion 
 %		  (http://onlinelibrary.wiley.com/doi/10.1002/adma.201502298/full etc.)
