on the TE and TM polarisation - publications differ

--- a/intro.tex
+++ b/intro.tex
@@ -109,6 +109,18 @@ thus in their case $\varepsilon''\equiv -\text{Im}(\varepsilon)$. This is not th
 
 The unit system differs across the literature, too. Some of the references, e.g. \cite{landau1984electrodynamics, agranovich2006spatial, krowne2007book_agran} use the older centimeter-gram-second (CGS) system, which for instance leaves out the dimension constants of $\varepsilon_0, \mu_0$. The whole thesis uses consistently the meter-kilogram-second (SI) system.
 
+%% TODO definition between TM (or, "p") and TE (or, "s") conventions in quasi-two-dimensional structures
+%% ---- TM (or, "p") means: "electric field is along the translation axis of the structure, magnetic field along the grating vector"
+%% * \cite{rybin2014photonic} "modes with the magnetic component in the xy plane, i.e., TM (Hx, Hy, Ez)"
+%% * \cite{joannopoulos2011photonic} "(Hx, Hy, Ez) ... The latter, in which the magnetic field is confined to the xy plane, are called transverse-magnetic (TM) modes."
+%% ---- TM (or, "p") means: "magnetic field is along the translation axis of the structure, electric field along the grating vector"
+%% * \cite{vynck2009all} "dielectric rods in s-polarized light (electric field parallel to the axis of the rods) could exhibit both ..."
+%% * Thibault's computations 
+%% TODO in non-perpendicular incidence on a plane: 
+%% ---- TM (or, "p") means "electric field parallel to the plane of incidence, magnetic field to the optical surface"
+%% * \cite{jelinek2010fishnet} "TM incident wave with field components (Ey, Ez, Hx)
+%% * everybody knows that "s"-polarisation reflects more than "p" at dielectric interfaces
+
 \begin{table}[ht]   \caption{Table of abbreviations}  \label{tb_shortcuts} \centering 
 \begin{tabular}{ll}
  \toprule
