finished erods + started yslits

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -23,6 +23,7 @@
 % 	(the base line is that many concepts are not as novel as they may appear, and that modern papers
 %	often fail to cite the author of the original idea)
 %    historical review suggests formal unification of MM and PhC concepts, attempt for clarification of these two terms
+%	 ... which is also illustrated by the numerous recent publications on the rod array, which lies at the boundary between MM and PhC
 %  * filled the demand for some starting overview of the common structures, in a level of detail and
 %    didactic approach that the author was missing in the available literature
 %	  sum up all  structures
@@ -46,7 +47,7 @@
 %         stress the importance of taking the spatial dispersion into account; omission thereof is in some case a fundamental misconception, rather 
 %			than a mere inaccuracy
 %			(papers sometimes claim that negative refraction may not occur at NIR/optical frequencies due to the lack of magnetic activity; however
-%			this relies on the local eff. param paradigm)
+%			this relies on the local eff. param theory)
 %      3) the s-parameter method, although widely used, does not always give correct results for diverse reasons
 %		  notice that e.g. 1-D PhC allows to determine Neff, but not eeff,meff, whereas
 %		  the electro-magnetic resonator exhibits independent el and mag resonances, but its Neff can not always 
