--- a/theory.tex
+++ b/theory.tex
@@ -968,7 +968,7 @@ In three-dimensional cubic lattice, these points maintain their meaning in the p
 %}}}
 %% \paragraph{Dispersion curves for the reduced Brillouin zone} %{{{ 
 %% %}}}
-\paragraph{Tight-binding model for the photonic band gaps} %{{{
+\paragraph{Tight-binding model for the dispersion curves} %{{{
 The notation of the high-symmetry points in the Brillouin zone can outline a different way \cite{shi2007} of understanding the origin of the dispersion, which can be drawn in analogy with the \textit{tight-binding},   %% TODO cite?
 or also \textit{hopping},  %% TODO cite?
 model in solid-state physics. 
@@ -998,7 +998,7 @@ The stronger the coupling between the neighbouring cells, the bigger the differe
 \subsection{Band gaps} 
 \paragraph{Properties of band gaps} %{{{
 In the plots of dispersion curves, one can identify ranges of frequencies which are not associated with any dispersion curve. 
-They could be observed for a local dielectric (Figs. \ref{fg_dcsimpleel} and \ref{fg_dcll}), for nonlocal dielectrics (Figs. \ref{fg_dcll_nl}, \ref{fg_dcllactivity}), as well as for periodic structures in Fig. \ref{fg_phcfolding}. Such regions are denoted as (electromagnetic) \textit{band gaps}. They are a very common phenomenon both in dispersive homogeneous media and periodic structures. 
+They could be observed for a local dielectric (Figs. \ref{fg_dcsimpleel} and \ref{fg_dcll}), for nonlocal dielectrics (Figs. \ref{fg_dcll_nl}, \ref{fg_dcllactivity}), as well as for periodic structures in Fig. \ref{fg_phcfolding}. Such regions are denoted as (electromagnetic) \textit{band gaps}, or sometimes also \textit{stop-bands}. They are a very common phenomenon both in dispersive homogeneous media and periodic structures. 
 While the wave propagation received due attention in the above, also the wave "non-propagation" deserves to be commented.
 %It is essential to point out the similarities and eventual differences between them.
 
