--- a/result.tex
+++ b/result.tex
@@ -269,7 +269,7 @@ The presented simulations were not optimized for the dissipative losses in silic
 
 %}}}
 %     \FloatBarrier %====================================================================================================
-%     \section{Electric resonators} \label{section_esrr} % references to -> % note about plasmonic particles 
+%     \section{Electric resonators} \label{section_esrr} % note about plasmonic particles 
 %     OFF \paragraph{Comparison of spectra to the cut wires}%{{{
 %     From Figs. \ref{fg_CutWires_wirecut2um_wireradiusscan} and \ref{fg_CutWires_wireradius1u_cutwidth_comparison} it follows that for any practically attainable geometry, the frequency of the first individual resonance in cut-wire arrays is always relatively close to the first Bragg band gap. 
 %     
@@ -278,7 +278,7 @@ The presented simulations were not optimized for the dissipative losses in silic
 %}}}
 \FloatBarrier %====================================================================================================
 %}}}
-\section{Split-ring resonator} \label{section_srr} % references to -> %{{{
+\section{Split-ring resonator} \label{section_srr} % %{{{
 \paragraph{Resonances with magnetic dipole moment}%{{{
 The fundamental resonance in a cut wire has the electric dipole moment only. The resonant magnetic field circulates around the wire and due to its rotational symmetry along the $x$-axis, the magnetic dipole moment is zero. Other structures can support resonances of lower symmetry with regards to the $x$-axis, thus having a magnetic dipole moment.
 
@@ -430,7 +430,7 @@ Comparison of the more familiar standard SRR (split width $d=4$ $\mu$m) with its
 %}}}
 \FloatBarrier %====================================================================================================
 %}}}
-\section{Combined electric and magnetic resonator} \label{section_srr} % references to -> %{{{
+\section{Combined electric and magnetic resonator} \label{section_srr} %{{{
 \paragraph{Effect of the central bar in SRR}%{{{
 The fundamental resonance of a split-ring resonator (SRR) is the magnetic one, where the current circulates around its circumference. When one adds a central bar parallel to the electric field and the $x$-axis, as in Fig. \ref{fg_SRR_elmag}a, the frequency of the magnetic resonance does not change significantly. The reason comes from the symmetry thereof, which stipulates that that zero net current flows through the central bar. 
 
@@ -532,7 +532,7 @@ Provided the auxiliary boundary conditions are arranged to couple all energy exc
 %}}}
 \FloatBarrier %====================================================================================================
 %}}}
-\section{Dielectric spheres} % references to ->			%{{{
+\section{Dielectric spheres} %{{{
 % \cite{prosvirnin2015planar} % todo read
 \paragraph{Mie resonances}%{{{
 Already in Eqs. (\ref{eq_rho_n1},\ref{eq_rho_n2}) it was assumed that at higher frequencies, there is no difference in the effect of conduction and polarisation currents. The current conducted around a split-ring resonator has a direct analogy in the polarisation current circulating along the circumference of a dielectric particle. The capacitor of the SRR is then replaced by the distributed capacitance of the whole dielectric. For the first resonance in spherical dielectric particles, the magnetic dipole moment induced by the polarisation current goes through the sphere axis. The resonance frequency is inversely proportional to the radius $\rho$ of the sphere, and in general, decreases monotonously with the growth of the dielectric permittivity $\epsrl$.
@@ -785,7 +785,7 @@ This band gap starts in the $X1$ point, where each unit cell is divided by one n
 %}}}
 \FloatBarrier %====================================================================================================
 %}}}
-\section{Dielectric rods parallel to the electric field} \label{sect_diel_rods_el} % references to ->
+\section{Dielectric rods parallel to the electric field} \label{sect_diel_rods_el} 
 \begin{figure}[h!]  %{{{ erods_acomparison
 	\caption{Amplitude of \textbf{(a)}  reflectance, \textbf{(b)} transmittance \textbf{(c)} effective index of refraction $\Neff$ and \textbf{(d)} effective permittivity $\eeff$ for a rod array with constant radius $\rho = 10$ $\mu$m, dielectric permittivity  and grid resolution of 1 $\mu$m. } \label{fg_erods_acomparison} \centering \vspace{-3mm} 
 %% NOTE: if realistic materials are needed, erods_acomparison-loLoss_r.pdf can be substituted for  erods_acomparison_r.pdf etc.
@@ -905,7 +905,7 @@ This simple rule eliminates the possibility of obtaining $\Neff'<0$ from any hig
 	\end{overpic}\\
 \end{minipage}
 \begin{minipage}[c]{0.49\textwidth}
-	\caption{Spatially resolved spectra of the electric field for the unit cell cell sizes \textbf{(a)} $a=120$  }\vspace{3cm} \label{fg_fxplot}
+	\caption{Spatially resolved spectra of the electric field for the unit cell cell sizes \textbf{(a)} $a=120$ $\upmu$m and \textbf{(b)} $a=90$ $\upmu$m \textbf{(c)} $a=80$ $\upmu$m  }\vspace{3cm} \label{fg_fxplot}
 \end{minipage}  
 \vspace{-12mm}
 \end{figure} 
@@ -930,7 +930,7 @@ To the author's knowledge, such kind of plots has not been published in any pape
 
 The case of sparse rods (Fig. \ref{fg_fxplot}a) clearly illustrates that beginning from the lower edge of the first band gap, at 0.42 THz, up to the electric resonance at 0.745 THz, one nodal plane per unit cell crosses the line where field is recorded. The nodal plane can be detected as sets of points where the field intensity drops to very low values, and it introduces a $+\pi$ shift of the field phase between adjacent cells. 
 
-Unfortunately, the field pattern close to the resonant frequency is hard to interpret due to boundary effects on the structure, but above the resonance one can clearly see that no nodal planes are present. This is in accordance with the predicted exponential decay of the evanescent wave whenever $\Neff' = 0$ and $\Neff' < 0$. The electric dipole of the rods is opposite to the surrounding field in this region, but the nodal planes form closed surfaces around each rod, and the phase difference between the unit cells is zero. From 0.97 THz on, the second photonic band starts which allows the electromagnetic energy propagate through the structure.
+Unfortunately, the field pattern close to the resonant frequency is hard to interpret due to boundary effects on the structure, but above the resonance one can clearly see that no nodal planes are present. This is in accordance with the predicted exponential decay of the evanescent wave whenever $\Neff' = 0$ and $\Neff'' < 0$. The electric dipole of the rods is opposite to the surrounding field in this region, but the nodal planes form closed surfaces around each rod, and the phase difference between the unit cells is zero. From 0.97 THz on, the second photonic band starts which allows the electromagnetic energy propagate through the structure.
 
 The second case of the medium-density rod array (Fig. \ref{fg_fxplot}b) is known to bring both resonances into the first band gap. At the frequency of the first resonance, one nodal plane in each unit cell is removed and the phase advance across a cell is reduced from $+\pi$ to $0$. The second resonance further reduces this phase difference, from $0$ to $-\pi$, which involves formation of one nodal plane per unit cell. Accordingly, faint nodal planes can be observed again in the upper part of the first band gap. 
 
@@ -941,7 +941,7 @@ Finally, upon reduction of the unit cell size to $80$ $\upmu_m$ (Fig. \ref{fg_fx
 It can be deduced that the reason why two Mie resonances can no longer be observed for $a\lesssim 85$ $\upmu$m is in the change of the nodal surface topology. When the rods are far from each other ($a\gtrsim 88$~$\upmu$m), the individual Mie resonances create closed regions dominated by the near field of the resonance, which are delimited by roughly elliptical nodal surface. Thus in Fig.  \ref{fg_fxplot}b, between 930 and 1100 GHz,  %% todo verify freqs
 no nodal plane is intersected by the inter-cell axis, where the electric field is recorded.
 
-Upon reducing the unit-cell size ($a\lesssim 85$~$\upmu$m) at the same frequency, the regions of opposite fields start to overlap with those from the neighboring cells and the nodal surfaces interconnect with each other. The wave propagating through an unit cell then changes its sign twice, which manifests itself as a $2\pi$ phase change compared to the $a=90$ $\upmu$m case. 
+Upon reducing the unit-cell size ($a\lesssim 85$~$\upmu$m) at the same frequency, the regions of opposite fields start to overlap with those from the neighboring cells and the nodal surfaces interconnect with each other. The wave propagating through an unit cell then twice changes its sign, which manifests itself as a $2\pi$ phase change compared to the $a=90$ $\upmu$m case. 
 
 This pair of open nodal surfaces dividing the unit cell manifests itself by a qualitative change of the $\Neff'$ spectrum towards a shape typical for one-dimensional photonic crystals.
 
@@ -981,40 +981,28 @@ The permittivity of silicon, $\epsrl \approx 12$, is one of the highest availabl
 Figs. \ref{fg_drawn100} \ref{fg_drawn100} and \ref{fg_fxplot} show that dielectric rods do not have to be geometrically touching to start behaving like a 1-D PhC. Strong enough near-field interaction is sufficient, and the exact critical ratio of the radius to the unit cell size $\rho/a > 0.5$ depends on the dielectric permittivity. This qualitative change occurs for a particularly low filling fraction in the array of rods parallel to the electric field, but it should occur in other kinds of structures, provided their unit cells are so small to promote strong near-field interaction of neigbouring resonant elements.
 %}}}
 \paragraph{Discussion} %{{{
+A very similar structure  is studied in Ref. \cite{vynck2009all} as a metamaterial; each rod is viewed as a separate dielectric resonator, with analytical formula used to establish the Mie resonance frequencies of an isolated rod. Since the inter-cell coupling is neglected in the paper, its authors predict that the electric and magnetic resonances would be found even for a relatively low permittivity $\epsrl = 12$. Based on this, its authors conclude that a metamaterial with $\Neff'<0$ can be built of silicon rods -- which is in direct contradiction with our results presented above, and in Ref. \cite{dominec2014transition}.
 
+A was studied recently in Ref. \cite{rybin2014photonic}; again the Mie resonance frequencies were deduced from the analytical formula, without taking into account the near-field coupling thereof. The paper correctly identifies that different choices of the rod parameters, $\epsrl$ and $a/\rho$, can exchange the order of Bragg and Mie resonances 
 
-A very similar structure Ref. \cite{vynck2009all} is studied within the metamaterial paradigm. Each rod is viewed as a separate dielectric resonator, with analytical formula for the Mie resonance frequencies. The overlap of the electric and magnetic resonance is predicted even for a relatively low permittivity $\epsrl = 12$. Based on this, its authors conclude that a metamaterial with $\Neff'<0$ can be built of silicon rods -- which is in direct contradiction with our results presented above.
+%\cite{rybin2015phase}
 
-Ref. \cite{peng2007} experimentally investigates a metamaterial made of square bars parallel to the electric field, with very high permittivity of $\epsrl=600$. The geometry of the bars is equivalent to the \textit{dense array} of cylindrical rods $a/\rho \sim 3$, which means it should classify as the \textit{dense} array, exhibiting no individual resonances and no negative index of refraction. However, as the major result of the paper \cite[Fig. 3bc]{peng2007} it is demonstrated that negative refraction occurs at the wedge, and it is more or less maintained upon randomization of the rod positions.
+Ref. \cite{peng2007} presents a wedge-refraction experiment with a similar metamaterial, made of square bars parallel to the electric field. The bars have a very high permittivity of $\epsrl=600$, but still the geometry of the bars is equivalent to the \textit{dense array} of cylindrical rods $a/\rho \sim 4.5$. Thus it should exhibit no individual resonances and no negative index of refraction. However, as the major result of the paper \cite[Fig. 3bc]{peng2007} it is demonstrated that negative refraction occurs at the wedge, and moreover it is more or less maintained upon randomization of the rod positions.
+The clash can be explained by a relatively big angle of the wedge around 20$^\circ$, which actually prevents the use of effective index of refraction. % write why the randomization does not cancel the negative refraction
 
-Our results \cite{dominec2014transition} appear to be in contradiction with the predicted \cite{vynck2009all} and observed \cite{peng2007} negative refraction.
+The relevant references (\ref{shi2007, peng2007, vynck2009all, rybin2014photonic, dominec2014transition}) come from the last ten years, although they are based on experimental and numerical methods that could be used already several decades ago. This confirms the author's view that the publications are incited by relatively recent merging of the \textit{metamaterial} and \textit{photonic crystal} paradigms (see Fig. \ref{fg_mm_phc_diagram}).
 
-
-\cite{rybin2014photonic}
-\cite{rybin2015phase}
-
-%% References:
-% 
-
-%% 
-, similar to 
-
-\add{
-%which imposes strict limits on the geometry, 
-Having analyzed the case of high dielectric ($\varepsilon_r=100$) permittivity rods, we will draw below implications for building a negative-index MM from available dielectrics.  Another series of simulations implies that reducing the dielectric permittivity has the main effect to shift all the Mie resonances to higher frequencies (also with respect to the photonic bands). As a result, the band with $\Neff'<0$ gets gradually narrower and, for the rod permittivity below about 50, we do not find any cell size $a$ that would imply the first and second Mie resonances in the first photonic band as illustrated for $\varepsilon_r = 30$ in Fig. \ref{fg_drawn030}. This means that the value of $\varepsilon_{r} \approx 50$ is the minimum for obtaining a negative index of refraction in any square array of cylindrical rods. Note that one would come to a very similar value of minimum permittivity for the case of a square array of bars with a slightly different shape, e.g. a square cross-section. 
+In Refs.  \cite{rybin2014photonic} and \cite{dominec2014transition}, the structure behaviour is described as metamaterial-like, when the lowest band gap contains one or both Mie resonances. Otherwise, when the first band gap is of Bragg type, the structure is classified among photonic crystals. This is however a rather formal notation. The terminology difference has been discussed in the theoretical section, with the conclusion that one structure can be a representative of metamaterials and photonic crystals simulaneously, depending on the paradigm one prefers to use for its description. 
 
 A sufficiently high permittivity can be found in the microwave and terahertz ranges, in a variety of materials, for example in titanium dioxide with $\varepsilon_r \approx 92$ \cite{nemec2009tunable} or in various ferroelectrics like strontium titanate \cite{skoromets2011tuning}. However, practical applications of the high-permittivity dielectrics in the THz range can be restricted by high dielectric losses due to low-frequency phonon absorption tails. To our knowledge, there is no material providing such a high permittivity in the near-infrared or optical ranges. This eliminates the possibility to build a MM at these frequencies with $\Neff'<0$ based on dielectric rods.
 
-Finding a valid negative index of refraction $\Neff'$ for a photonic structure implies that the Snell law can be used to predict the negative refraction at an interface, provided the iso-frequency contours can be well approximated by a circle. This condition is fulfilled when the resulting wave vector is oriented close to a symmetry axis of the structure, or when the wave vector is negligible compared to the reciprocal lattice vector (i.e. $k\ll \frac{\pi}{a}$ and thus $|\Neff'| \ll \frac{c}{2af}$).  In the latter case the iso-frequency contours of the isotropic structure approach a circular shape near the $\Gamma$-point in the Brillouin zone center.  By contrast, the opposite implication is not necessarily applicable---a structure with a high enough spatial dispersion can still refract under negative angles, yet its refractive index computed along a symmetry axis never reaches negative values and the phase difference across each its unit cell is positive and can be comparable to $\pi$.  For example, it was suggested earlier  \cite{vynck2009all} that an array of silicon rods ($\varepsilon_r \approx 12$) can constitute a true left-handed metamaterial ($\Neff'<0$).  In agreement with the results presented above, we believe that the negative refraction is not a sufficient proof of $\Neff'<0$, which would require a much higher permittivity contrast than that of silicon.  We conclude that the electromagnetic behavior observed previously \cite{vynck2009all} has to be described by means of the PhC dispersion curves. 
-
-We demonstrated that for $\Neff'<0$, not only the high permittivity contrast, but also a correct geometry is required. A wedge filled with an array of square-shaped high-dielectric bars was previously reported refracting under negative angles \cite{peng2007}. The high filling fraction ($0.44^{2}$) simultaneously with a permittivity of $\varepsilon_r \approx 600$ clearly qualified this structure as \textit{dense}. Using the above described approach, we computed its spectra qualitatively similar to Fig.~\ref{fg_spec}(c) and no band with $\Neff' < 0$ was resulting from our effective index retrieval. However, when we reproduced the wedge experiment numerically, our simulations confirmed that it does refract the light under negative angles.
-
-This structure lies at the boundary between the criteria for MMs and PhCs described in the Introduction.  To determine its refraction angle, in general, it is not possible to use the concept of the effective refractive index and its iso-frequency contours have to be used instead (like in PhCs). At the same time, this structure was proved to partially retain negative refraction even under randomization of the positions of the dielectric bars \cite{peng2007}, implying that most of the resonant energy is concentrated inside the dielectric (which is characteristic of MMs).
-}
 %}}}
 \FloatBarrier %====================================================================================================
 
 \section{Metallic sheet with slits} \label{section_eot}
+As mentioned earlier, thin metallic wires do not appreciably interact with the electromagnetic wave when oriented perpendicular to the electric field. The situation changes when they are broadened to form an array of conductive stripes.
+
+
 Wood anomaly in hole arrays
 Standing SPP wave
 
