--- a/conclusion.tex
+++ b/conclusion.tex
@@ -35,6 +35,8 @@
 %		a special exception is when approaching a Dirac point of isofrequency contours
 %	- (the choice of branch for Neff is unambiguous by our retrieval procedure based on FDTD; yet it deserves
 %		proper physical interpretation in some structures)
+%		although often mentioned as such \cite{mortensen2010unambiguous}, the ambiguity of retrieved refractive index does not present a big issue compared to more fundamental limitations
+%		of the s-parameter method
 %  * the Results section has shown that for the idealized lattice of resonant elements, denoted as a Bloch lattice in \ref{simovski2007bloch}, the spectra of effective index of refraction would have a form of alternating photonic bands, with always growing Neff(f), and photonic band gaps, where $Neff'(f)$ follows a Brillouin zone boundary, except for well-defined individual resonances of the electric or magnetic dipole. The results have, nonetheless, also proven that this interpretation is only approximate, due to evanescent inter-cell coupling and the resulting spatial dispersion. In particular, some structures made of metal preclude to use the $Neff'(f)$
 %	  
 %  * pointed out the fundamental problems: 
